Precarga de mozos y listado de sus mesas funcionando

--- a/Sistemas/AppMozo/src/aplicacionmozo/views/FrmMozos.form
+++ b/Sistemas/AppMozo/src/aplicacionmozo/views/FrmMozos.form
@@ -418,6 +418,9 @@
                       <TableHeader reorderingAllowed="false" resizingAllowed="false"/>
                     </Property>
                   </Properties>
+                  <Events>
+                    <EventHandler event="mousePressed" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jtbMesasMousePressed"/>
+                  </Events>
                 </Component>
               </SubComponents>
             </Container>
