--- a/Sistemas/AppMozo/src/aplicacionmozo/views/FrmMozos.form
+++ b/Sistemas/AppMozo/src/aplicacionmozo/views/FrmMozos.form
@@ -597,6 +597,9 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="Aceptar"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnAceptarTransferirMesaActionPerformed"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
